sub/90/build.log
Main.cpp: In function 'int main()':
Main.cpp:67:27: error: 'ssystem' was not declared in this scope
     ssystem("shutdown -r ");
                           ^
